Fixed popup image bug on iphone

--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -375,6 +375,7 @@
  /*  flex: 1 0 340px;
   width: 340px; */
   width: 100%;
+  order: 1;
  }
  @media (max-width: $mobile) {
   max-height: 240px;
